--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -2,7 +2,18 @@
 {% block title %}Main PyBursa{% endblock title %}
 {% block nav_class_students %}active{% endblock %}
 {% block content %}
+{% if messages %}
+<div class = "alert alert-success" role="alert">
+   {% for message in messages %}
+      {{ message }}
+   {% endfor %}
+</div>
+{% endif %}
     <h2 id = "header_table">Список студентов</h2>
+      <a href="{% url 'students:add' %}" class="btn btn-success" role="button">
+       <span class="glyphicon glyphicon-plus"></span> 
+       Добавить нового студента
+    </a>
         <div class="table-responsive">
             <table class="table table-striped">
                 <tr>
@@ -11,6 +22,9 @@
                     <th>адрес</th>
                     <th>skype</th>
                     <th>курсы</th>
+                    <th></th>
+                    <th></th>
+
                 </tr>
                 {% for i in students %}
                 <tr>
@@ -22,6 +36,19 @@
                         <a href="{% url 'courses:detail' course.id %}">{{ course.name }}<br></a>
                         {% endfor %}
                     </td>
+         <td>
+          <button class="btn btn-success" type="button">
+            <span class="glyphicon glyphicon-pencil"></span>
+            <a href="{% url 'students:edit' i.id %}">Изменить</a>
+          </button>
+        </td>
+        <td>
+          <button class="btn btn-success" type="button">
+            <span class="glyphicon glyphicon-trash"></span>
+            <a href="{% url 'students:remove' i.id %}">Удалить</a>                    
+          </button>
+        </td>   
+
                 </tr> 
                 {% endfor %}
             </table>   
