--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -3,8 +3,17 @@
 
 {% block content %}  
 
+{% if messages %}
+<div class = "alert alert-success" role="alert">
+   {% for message in messages %}
+      {{ message }}
+   {% endfor %}
+</div>
+{% endif %}
   
     <div class="container">
+
+
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                 <h2>{{ student.name }} {{ student.surname}}</h2></div>
