--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -4,6 +4,14 @@
 {% block content %}
   
 
+{% if messages %}
+  <div class = "alert alert-success" role="alert">
+    {% for message in messages %}
+    {{ message }}
+    {% endfor %}
+  </div>
+{% endif %}
+
   <div class="container">
     <div class="jumbotron">
         <h1>{{ course.name }}</h1>
@@ -32,6 +40,10 @@
 <div class="container">
     <h2>План курса</h2>
 <div>
+  <a href="{% url 'courses:add-lesson' course.id %}" class="btn btn-success" role="button">
+       <span class="glyphicon glyphicon-plus"></span> 
+       Добавить новый урок
+    </a>
 <div class="container">
       <div class="table-responsive">
       <table class="table table-striped">
