--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -29,7 +29,7 @@
             <th>{{coach.phone}}</th>
         </tr>
             <th>Курсы учитель</th>
-             <td>{% for course in coach.coach_courses.all %}
+             <td>{% for course in teacher %}
                <p><a href="{% url 'courses:detail' course.id %}">{{course.name}}</a>
                студенты курса 
                <a href="{% url 'students:list_view' %}?course_id={{course.id}}"><span class="glyphicon glyphicon-info-sign"></span></a>
@@ -39,7 +39,7 @@
         </tr>        
         </tr>
             <th>Курсы ассистент</th>
-             <td>{% for course in coach.assistant_courses.all %}
+             <td>{% for course in cassistant %}
                <p><a href="{% url 'courses:detail' course.id %}">{{course.name}}</a>
                студенты курса 
                <a href="{% url 'students:list_view' %}?course_id={{course.id}}"><span class="glyphicon glyphicon-info-sign"></span></a>
