--- a/templates/courses/add.html
+++ b/templates/courses/add.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-<div class="page-header"><h3 class="text-center">Создание нового курса</h3></div>
+<div class="page-header"><h3 class="text-center">{{ title }}/h3></div>
 	<div class="container">
 		<form method="post">
 			{% csrf_token %}          
