--- a/templates/courses/add_lesson.html
+++ b/templates/courses/add_lesson.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 
 
-{% block title %}New Lesson PyBursa{% endblock title %}
+{% block title %}{{ title }} PyBursa{% endblock title %}
 
 
 
