--- a/templates/courses/edit.html
+++ b/templates/courses/edit.html
@@ -1,26 +1,30 @@
 {% extends "base.html" %}
 
 
-{% block title %}Edit Course PyBursa{% endblock title %}
+{% block title %}Course edit Pybursa{% endblock title %}
 
 
-{% block nav_class_index %}active{% endblock %}
+{% block nav_class_students %}active{% endblock %}
 
-
-{% load staticfiles %}
 
 {% block content %}
-    <div class="container">
 
-          <form method="post">
-            {% csrf_token %}           
-			{{ form.as_p }}
-            <input type="submit" value="Изменить"/>
-		<br />
-		<br />
-          </form>
-       
-        
-    </div>
-    <hr>
+{% if messages %}
+<div class = "alert alert-success" role="alert">
+   {% for message in messages %}
+      {{ message }}
+   {% endfor %}
+</div>
+{% endif %}
+
+
+<div class="page-header"><h3 class="text-center">{{ title }}</h3></div>
+        <div class="container">
+                <form method="post">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <input type="submit" value="Изменить"/>
+                </form>
+        </div>
+</br>
 {% endblock content %}
