--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
        <li class="{% block nav_class_index %}{% endblock %}"><a href="{% url 'index' %}">Main</a></li>
        <li class="{% block nav_class_contact %}{% endblock %}"><a href="{% url 'contact' %}">Contacts</a></li>
        <li class="{% block nav_class_students %}{% endblock %}"><a href="{% url 'students:list_view' %}">Students</a></li>
+       <li class="{% block nav_class_feedback %}{% endblock %}"><a href="{% url 'feedback' %}">Feedback</a></li>
          
     </ul>
   </div>
